--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,11 @@
 	</form>
 	<ul>
 		{% for todo in todos %}
-			<li>{{todo.content}}</li>
+			<li>{{todo.content}} 
+				<a href="{{ url_for('delete_todo',oid=todo._id) }}">
+					<button style="background-color:red;">Delete</button>
+				</a>
+			</li>
 		{% endfor %}
 	</ul>
 	
